docs/i18n/ru/docusaurus-plugin-content-docs/version-1.4/shortcuts.md
---
title: "Ярлыки"
sidebar_position: 2
---

Есть несколько ярлыков, которые вы можете использовать в редакторе. Некоторые из них написаны под кнопками.

## Общие положения

* `Ctrl` + `N`: Новый файл
* `Ctrl` + `Shift` + `N`: Новый файл из шаблона
* `Ctrl` + `O`: Открыть файл
* `Ctrl` + `I`: Импорт файла
* `Ctrl` + `E`: Экспорт файла
* `Ctrl` + `Shift` + `E`: Экспорт файла как изображения
* `Ctrl` + `Alt` + `E`: Экспорт файла как svg
* `Ctrl` + `Alt` + `S`: Открыть настройки

## Проект

* `Ctrl` + `Z`: Отменить
* `Ctrl` + `Y`: Повтор
* `Ctrl` + `Alt` + `N`: Open insert dialog
* `Ctrl` + `Alt` + `Shift` + `S`: Открыть настройки проекта
* `Ctrl` + `Shift` + `P`: Open waypoints dialog
* `Ctrl` + `P`: Открыть диалог цветовой палитры
* `Ctrl` + `B`: Открыть фон диалога
* `Ctrl` + `Shift` + `A`: Открыть диалог областей
* `Ctrl` + `L`: Открыть диалог слоёв
* `Ctrl` + `S`: Сохранить
* `Alt` + `S`: Изменить путь

## Stylus

* `Основная кнопка`: Изменить руку на инструмент
* `Дополнительная кнопка`: Изменить на второй художник
